fixes horizontal scroll into home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,8 +311,8 @@ section.craft-pc > div {
   }
 
   #teste-img {
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .sobre-button {
@@ -408,8 +408,8 @@ section.craft-pc > div {
   }
 
   #teste-img {
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .sobre-button {
@@ -505,8 +505,8 @@ section.craft-pc > div {
   }
 
   #teste-img {
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .sobre-button {
